# monksynth_nt

./: .gitignore  CHANGELOG.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/patches/: vstgui-static-linux.patch
cpp/scripts/: build-static-deps.sh
cpp/src/: info_view.cpp  sample_renderer.cpp  setup_view.cpp  version.h.in
installer/macos/: distribution.xml
nanotracker/: README.md  build_plugin.py  plugin.json  script.js
nanotracker/web/: index.html
skills/nanotracker-plugin-porting-playbook/: SKILL.md
skills/nanotracker-plugin-porting-playbook/references/: characterization.md  fx-manifest-v4.md
